Improve mobile layout and update welcome messages across all managers

--- a/chemoProtocolManager/index.html
+++ b/chemoProtocolManager/index.html
@@ -51,7 +51,7 @@
             <div id="welcomeView">
                 <div class="card empty-state" style="text-align:center; padding: 40px;">
                     <h2 id="welcomeTitle">Welcome</h2>
-                    <p id="welcomeText">Please load a valid JSON file on the left to manage chemotherapy protocols.</p>
+                    <p id="welcomeText">Please load a valid JSON file to manage chemotherapy protocols.</p>
                 </div>
             </div>
 
