--- a/drugInteractionManager/index.html
+++ b/drugInteractionManager/index.html
@@ -43,7 +43,7 @@
             <div id="welcomeView">
                 <div class="card empty-state" style="text-align:center; padding: 40px;">
                     <h2>Welcome</h2>
-                    <p>Please load a valid JSON file on the left to manage drug interactions.</p>
+                    <p>Please load a valid JSON file to manage drug interactions.</p>
                 </div>
             </div>
 
