--- a/chemoMedicationManager/index.html
+++ b/chemoMedicationManager/index.html
@@ -50,7 +50,7 @@
             <div id="welcomeView">
                 <div class="card empty-state" style="text-align:center; padding: 40px;">
                     <h2>Welcome</h2>
-                    <p>Please load a valid JSON file on the left to manage chemotherapy medications.</p>
+                    <p>Please load a valid JSON file to manage chemotherapy medications.</p>
                 </div>
             </div>
 
