--- a/chemoProtocolManager/index.html
+++ b/chemoProtocolManager/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chemo Protocol Manager</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 
@@ -21,15 +21,15 @@
 
         <!-- Sidebar / Navigation -->
         <aside class="sidebar">
-            <div class="card" style="margin-bottom: 20px;">
+            <div class="card mb-20">
                 <h3>📂 Load Data</h3>
-                <p style="font-size:0.85rem; color:#666; margin-bottom:10px;">Select your
+                <p class="text-sm text-gray mb-10">Select your
                     <code>chemoProtocols.json</code> file to begin.
                 </p>
-                <input type="file" id="jsonFileInput" accept=".json" class="form-control" style="font-size:0.8rem;">
+                <input type="file" id="jsonFileInput" accept=".json" class="form-control text-xs">
             </div>
 
-            <div class="card" id="navCard" style="opacity: 0.5; pointer-events: none;">
+            <div class="card opacity-50 pointer-events-none" id="navCard">
                 <h3>Diseases</h3>
                 <ul id="diseaseList">
                     <!-- Populated by JS -->
@@ -37,10 +37,10 @@
                 <button class="btn btn-primary" id="addDiseaseBtn">+ Add Disease</button>
             </div>
 
-            <div class="card" style="margin-top: 20px;">
+            <div class="card mt-20">
                 <button class="btn btn-success" id="downloadBtn" disabled>💾 Download JSON</button>
                 <p class="save-status" id="saveStatus"></p>
-                <p style="font-size:0.8rem; color:#666; margin-top:5px;">
+                <p class="text-xs text-gray mt-5">
                     Saves <code>updated_chemoProtocols.json</code> to your downloads.
                 </p>
             </div>
@@ -49,7 +49,7 @@
         <!-- Main Content Area -->
         <section class="content">
             <div id="welcomeView">
-                <div class="card empty-state" style="text-align:center; padding: 40px;">
+                <div class="card empty-state">
                     <h2 id="welcomeTitle">Welcome</h2>
                     <p id="welcomeText">Please load a valid JSON file to manage chemotherapy protocols.</p>
                 </div>
